deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiali
  labels:
    app: kiali
    version: ${VERSION_LABEL}
spec:
  type: NodePort
  ports:
  - name: tcp
    protocol: TCP
    port: 20001
  selector:
    app: kiali
    version: ${VERSION_LABEL}
