deploy/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: "true"
  name: kiali
  labels:
    app: kiali
    version: ${VERSION_LABEL}
spec:
  backend:
    serviceName: kiali
    servicePort: 20001
