deploy/kubernetes/kiali.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiali
  labels:
    app: kiali
    version: ${VERSION_LABEL}
spec:
  type: NodePort
  ports:
  - name: tcp
    protocol: TCP
    port: 20001
  selector:
    app: kiali
    version: ${VERSION_LABEL}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kiali
  labels:
    app: kiali
    version: ${VERSION_LABEL}
spec:
  backend:
    serviceName: kiali
    servicePort: 20001
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kiali
  labels:
    app: kiali
    version: ${VERSION_LABEL}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiali
      version: ${VERSION_LABEL}
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: kiali
      labels:
        app: kiali
        version: ${VERSION_LABEL}
    spec:
      serviceAccount: kiali
      containers:
      - image: ${IMAGE_NAME}:${IMAGE_VERSION}
        name: kiali
        command:
        - "/opt/kiali/kiali"
        - "-config"
        - "/kiali-configuration/config.yaml"
        - "-v"
        - "${VERBOSE_MODE}"
        volumeMounts:
        - name: kiali-configuration
          mountPath: "/kiali-configuration"
      volumes:
      - name: kiali-configuration
        configMap:
          name: kiali
